<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:backgroundTintMode="screen">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <ImageView
            android:layout_width="119dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/user_steve"
            android:id="@+id/list_item_profile_match_image" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="12dp"
            android:gravity="center_vertical">

            <TextView
                android:text="Eamonn Foley"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/list_item_profile_match_name"
                android:layout_weight="0"
                android:padding="5dp"
                android:textStyle="normal|bold"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:text="Medicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/list_item_profile_match_course"
                android:padding="5dp"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:weightSum="1">

        <TextView
            android:text="@string/profile_match_mutual_interests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_weight="0"
            android:textSize="18sp"
            android:textAlignment="center" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_item_profile_match_mutual_interests"
            android:layout_weight="0"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:text="@string/button_add_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_item_profile_match_button_add_friend"
            android:layout_weight="1" />

        <Button
            android:text="@string/button_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_item_profile_match_button_message"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>